fixed-letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
   --title-color: rgb(33, 33, 33);
   --focus-color: rgb(33, 150, 243);
+  --dominant-l-s: 0.03em;
 }
 
 .page {
@@ -62,7 +63,7 @@
   color: rgb(33, 150, 243);
   font-size: 26px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
+  letter-spacing: var(--dominant-l-s);
 }
 
 .header-logo {
@@ -101,7 +102,7 @@
 .section-title {
   font-size: 36px;
   line-height: 1.16;
-  letter-spacing: 0.03em;
+  letter-spacing: var(--dominant-l-s);
   color: var(--title-color);
 }
 .specifics-element-title {
@@ -115,7 +116,7 @@
 .specifics-element-text {
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
+  letter-spacing: var(--dominant-l-s);
 }
 
 .section-team {
@@ -126,14 +127,14 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
+  letter-spacing: var(--dominant-l-s);
   color: var(--title-color);
 }
 
 .team-element-text {
   font-size: 16px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
+  letter-spacing: var(--dominant-l-s);
 }
 /*---------------------------------FOOTER------------------------------*/
 .footer {
@@ -149,7 +150,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
+  letter-spacing: var(--dominant-l-s);
   color: rgb(255, 255, 255);
   cursor: pointer;
 }
@@ -162,7 +163,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
+  letter-spacing: var(--dominant-l-s);
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -176,7 +177,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
-  letter-spacing: 0.03em;
+  letter-spacing: var(--dominant-l-s);
   color: var(--title-color);
   background-color: rgb(245, 244, 250);
   cursor: pointer;
@@ -198,7 +199,7 @@
 .portfolio-element-text {
   font-size: 16px;
   line-height: 1.88;
-  letter-spacing: 0.03em;
+  letter-spacing: var(--dominant-l-s);
   color: rgb(117, 117, 117);
 }
 
